✅ Add test for getPutRequests() and refactor method